fix layout bugs

--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -9,3 +9,7 @@
   text-align: center;
   color: white;
 }
+
+.footer-row {
+  width: 100%;
+}
