--- a/frontend/src/pages/Landing/Landing.css
+++ b/frontend/src/pages/Landing/Landing.css
@@ -186,7 +186,7 @@ body {
 
 /*-----------------------步骤-----------------------*/
 
-.show {
+.chanpinshow {
   width: 100%;
   height: 550px;
   margin: 74px auto 0;
